--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,122 @@
-/* Your CSS styles here! */
-
 body {
-  background-color: darkcyan;
-  color: white
+  background-color: #80d0c7;
+  color: #0f0c51;
+  font-family: "Karma", sans-serif;
+  font-size: 1.1em;
+  line-height: 1.5em;
+  margin: 0;
+  padding: 0;
 }
+img {
+  width: 100%;
+}
+h2, h3 {
+  font-size: 1.2em;
+  line-height: normal;
+  padding: 3px 10px;
+  color: #ffffff;
+  background-color: #13547a;
+}
+p {
+  padding: 0 0.6em 0.3em 0.6em;
+}
+button, input[type=submit] {
+  color: #ffffff;
+  background-color: #13547a;
+  border: 0;
+  line-height: normal;
+  padding: 3px 20px;
+}
+input {
+  border: 0;
+  background-color: #ffffff;
+  line-height: normal;
+  padding: 2px 15px;
+}
+fieldset {
+  border: 0;
+}
+
+.container {
+  max-width:1200px;
+  margin: auto;
+  padding: 20px;
+}
+header {
+  font-size: 1.1em;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+.header_logo {
+  font-size: 2.0em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.header_phone {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+header a {
+  color: #13547a;
+  text-decoration: none;
+}
+.header_nav {
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  padding: 5px 10px;
+}
+nav {
+ 
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+nav li  {
+  display: inline-block;
+  text-transform: uppercase;
+
+} 
+nav li a {
+  color: #ffffff;
+  padding: 0px 10px;
+ 
+} 
+header li a:hover {
+  color: #13547a;
+  background-color: white;
+}
+.header_nav input {
+  border: 0;
+  background-color: #d8dede;
+  line-height: normal;
+  padding: 3px 20px;
+}
+
+.restriction{
+  background-color: #d3d0d0;
+  color: rgb(26, 25, 25);
+}
+.restriction h2{
+  background-color: firebrick;
+  color: #ffffff;
+}
+
+
+.address_img {
+ width: 20%;
+}
+
+form p {
+  margin: 0;
+}
+
+form div {
+  margin: 10px 0;
+}
+
+
+
+
 
